<resources>
    <string name="action_settings">Settings</string>

    <string name="app_name">AgendaPersonal</string>
    <string name="endereco">Endereço:</string>
    <string name="CREF">CREF:</string>
    <string name="cpf">CPF:</string>
    <string name="telefone">Telefone:</string>
    <string name="nome">Nome:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="hora">Hora</string>
    <string name="id_professor">id_Professor</string>
    <string name="id_academia">id_Academia</string>
    <string name="data">Data</string>
    <string name="Professor">Professor</string>
    <string name="Data">Data</string>
    <string name="Hora">Hora</string>
    <string name="Academia">Academia</string>
    <string name="Modalidade">Modalidade</string>

</resources>
