<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/discobolo2"
    tools:context=".activity.ActivityAgendamento_Aula">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="Agendamento Aula"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:id="@+id/txv_agendar_aula"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/Modalidade"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/tv_id_modalidade"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_modalidade"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/Hora"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/tv_hora"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_hora"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/Data"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/tv_data"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_data"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/Professor"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/tv_professor"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_professor"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/Academia"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:id="@+id/tv_academia"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_academia"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/btCadastrar"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCELAR"
            android:id="@+id/btCancelar"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_alignBottom="@+id/btCadastrar"
            android:layout_toEndOf="@+id/btCadastrar"
            android:layout_marginStart="110dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="VOLTAR"
            android:id="@+id/btvoltar"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_alignBottom="@+id/btCadastrar"
            android:layout_toEndOf="@+id/btCadastrar"
            android:layout_marginStart="4dp" />
</RelativeLayout>
